fix: remove non essential files and created python file in notebook directory

--- a/notebooks/mental-health.ipynb
+++ b/notebooks/mental-health.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Hyperparameter\n",
     "from tensorflow import keras\n",
     "from kerastuner import HyperModel\n",
     "from kerastuner.tuners import RandomSearch, Hyperband\n",
@@ -1911,7 +1911,7 @@
     "features = df.drop(\"treatment\", axis=1)\n",
     "labels = df[\"treatment\"]\n",
     "\n",
-    "train_ratio = 0.8\n",
+    "train_ratio = 0.80\n",
     "validation_ratio = 0.15\n",
     "test_ratio = 0.05\n",
     "\n",
